--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
 
     <!-- For React Icon, UNCOMMENT -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    
+
+    <!--  'href="data:;base64,' tag is a way of specifying a "blank" or empty favicon for a web page. -->
     <link rel="icon" href="data:;base64," />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
