--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 
     <!--  'href="data:;base64,' tag is a way of specifying a "blank" or empty favicon for a web page. -->
-    <link rel="icon" href="data:;base64," />
+    <!-- <link rel="icon" href="data:;base64," /> -->
+
+    <!-- For brown leather bag portfolio img in brower tab -->
+    <link rel="icon" href="%PUBLIC_URL%/portfolio.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
